# mini-oft-llm

./: .gitignore  Makefile  README.md  REPORT_READY.md  instructions.md  pyproject.toml  requirements.txt
configs/: accelerate_2gpu.yaml  base.yaml  h100_ablation_block16.yaml  h100_main.yaml  h100_smoke100.yaml
data/firefly_prepared/: metadata.json
outputs/h100_ablation_block16/: README.md  all_results.json  eval_results.json  resolved_config.yaml  run_summary.json  train_results.json  trainer_state.json
outputs/h100_ablation_block16/eval/: before_after.jsonl  before_after.md  token_loss_metrics.json
outputs/h100_ablation_block16/final_adapter/: adapter_config.json
outputs/h100_main/: README.md  all_results.json  eval_results.json  resolved_config.yaml  run_summary.json  train_results.json  trainer_state.json
outputs/h100_main/eval/: before_after.jsonl  before_after.md  token_loss_metrics.json
outputs/h100_main/final_adapter/: README.md  adapter_config.json
prompts/: eval_prompts_zh.jsonl
report/: REPORT_TEMPLATE.md  build_figures.py  references.bib  report.tex
scripts/: check_environment.py  evaluate_token_loss.py  generate_before_after.py  plot_training_curves.py  run_all_tmux.sh  run_data_prep.py  run_eval_bundle.sh  run_h100_ablation.sh  run_h100_main.sh  run_h100_smoke.sh  train_oft_sft.py
src/mini_oft_llm/: __init__.py  config.py  data.py  eval.py  training.py
