[project]
name = "mini-oft-llm"
version = "0.1.0"
description = "OFT (Orthogonal Finetuning) mini-project for parameter-efficient finetuning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "accelerate>=0.34.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.20.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "peft>=0.18.0",
    "pyyaml>=6.0.1",
    "scipy>=1.12.0",
    "torch>=2.2.0",
    "transformers>=4.45.0",
    "trl>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

